--- a/css/index.css
+++ b/css/index.css
@@ -339,7 +339,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 }
 /* Tablet - 768px */
