--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -135,7 +135,7 @@
     text-align: center;
     margin: 0;
     color: #fff;
-    min-width: 9.375rem;
+    width: 250px;
     padding: 0 1.5rem;
     background-color: var(--primary);
     display: inline-block;
@@ -297,8 +297,8 @@
     z-index: 10;
   }
   #cs-navigation .cs-logo img {
-    width: 100%;
-    height: 100%;
+    width: 150px;
+    height: auto;
     /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
     object-fit: contain;
   }
@@ -526,13 +526,12 @@
     margin: 0 auto 0 0;
     padding: 0;
     display: flex;
-    justify-content: center;
     align-items: center;
     z-index: 100;
   }
   #cs-navigation .cs-logo img {
-    width: 100%;
-    height: 100%;
+    width: 150px;
+    height: auto;
     /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
     object-fit: contain;
   }
@@ -707,7 +706,7 @@
     margin-bottom: clamp(1.75rem, 4.17vw, 2.75rem);
   }
   #cs-footer-269 .cs-logo-img {
-    width: 100%;
+    width: 150px;
     height: auto;
   }
   #cs-footer-269 .cs-text {
