--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,14 @@
 <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
+.cs-content ul{
+  margin-left: 18px;
+}
+.cs-subcontainer{
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
 .text-content-item{
   display: flex;
   align-items: center;
@@ -121,32 +129,19 @@
     font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
     font-weight: 700;
     line-height: 1.2em;
-    text-align: center;
+    text-align: left;
     max-width: 51.8125rem;
     /* 16px - 24px */
     margin: 0 auto clamp(1rem, 4vw, 1.5rem);
     color: #fff;
     position: relative;
   }
-  #hero-81 .cs-title:after {
-    /* Divider Line */
-    content: '';
-    /* 60px - 100px */
-    width: clamp(3.75rem, 9.5vw, 6.25rem);
-    /* 4px - 8px */
-    height: clamp(0.25rem, 0.8vw, 0.5rem);
-    /* 16px - 24px */
-    margin: clamp(1rem, 4vw, 1.5rem) auto clamp(1rem, 4vw, 1.5rem);
-    background: var(--primary);
-    opacity: 1;
-    position: relative;
-    display: block;
-  }
+
   #hero-81 .cs-text {
     /* 16px - 25px */
     font-size: clamp(1rem, 1.95vw, 1.5625rem);
     line-height: 1.5em;
-    text-align: center;
+    text-align: left;
     width: 100%;
     /* 464px - 800px */
     max-width: clamp(29rem, 60vw, 50rem);
@@ -869,6 +864,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    border-radius: 18px;
   }
   #reviews-727 .cs-icon {
     /* 30px - 40px */
