--- a/css/about.css
+++ b/css/about.css
@@ -3,6 +3,10 @@
 <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
+  .material-symbols-outlined{
+    font-size: 2rem;
+    color: var(--bodyTextColorWhite);
+  }
   #sbs-578 .cs-container {
     width: 100%;
     max-width: 80rem;
