--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -806,8 +806,8 @@
     gap: 0.75rem;
   }
   #cs-footer-269 .cs-social-link {
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     background-color: var(--secondary);
     border-radius: 50%;
     display: flex;
@@ -818,11 +818,11 @@
     transition: transform 0.3s, background-color 0.3s;
   }
   #cs-footer-269 .cs-social-link:hover {
-    background-color: var(--primary);
+    transform: scale(1.1);
     transform: translateY(-0.1875rem);
   }
   #cs-footer-269 .cs-social-img {
-    height: 0.8125rem;
+    height: 1rem;
     width: auto;
     display: block;
   }
