--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin: 0 40px;
   }
 
   .hero-image{
@@ -55,7 +56,7 @@
     /* 144px - 300px - leaving extra space for the navigation */
     padding: 12rem 0;
     /* 130px - 450px */
-    padding-bottom: 20rem;
+    padding-bottom: 10rem;
     position: relative;
     z-index: 1;
     /* Prevents white rectangle pseudos from overlapping the sections below */
@@ -145,33 +146,15 @@
     width: 100%;
     /* 464px - 800px */
     max-width: clamp(29rem, 60vw, 50rem);
-    margin: 0 auto;
     /* 40px - 48px */
     margin-bottom: clamp(2.5rem, 4vw, 3rem);
     color: #fff;
   }
 }
-/* Desktop - 1300px (To make image background parallax) */
-@media only screen and (min-width: 81.25rem) {
 
-  #hero-81 .cs-background img {
-    display: none;
-  }
-}
 
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-  body.dark-mode #hero-81:before,
-  body.dark-mode #hero-81:after {
-    background: var(--dark);
-  }
-  body.dark-mode #hero-81 .cs-background:before {
-    opacity: .85;
-  }
-}
-/*-- -------------------------- -->
-<---         Services           -->
-<--- -------------------------- -*/
+
+
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
 
@@ -245,6 +228,9 @@
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
+  #hero-81{
+    padding-bottom: 18rem;
+  }
   #h-services-81 {
     padding-bottom: 0;
   }
@@ -1013,4 +999,19 @@
     width: 100%;
     object-fit: cover;
   }
+}
+
+/* Desktop - 1300px (To make image background parallax) */
+@media only screen and (min-width: 81.25rem) {
+
+  #hero-81 .cs-background img {
+    display: none;
+
+  }
+
+  #hero-81{
+    padding-bottom: 24rem;
+
+  }
+  
 }
